# emscripten-sdl-bug

./: CMakeLists.txt  README.md
emscripten/: shell.html
scripts/: zip-for-itch.sh
src/: main.cpp
